--- a/PMLexicon/.classpath
+++ b/PMLexicon/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-9.0.1"/>
 	<classpathentry kind="lib" path="/Users/shayne/eclipse stuff/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar"/>
 	<classpathentry kind="lib" path="/Users/shayne/eclipse stuff/Utilities/rs2xml.jar"/>
 	<classpathentry kind="lib" path="C:/test1/mysql-connector-java-5.1.45-bin.jar"/>
