--- a/PMLexicon1/src/config/config.properties
+++ b/PMLexicon1/src/config/config.properties
@@ -1,4 +1,4 @@
 user = rootext
 password = Scta1963#
 dbase = demo
-server = jdbc:mysql://10.0.0.5:3306/
+server = jdbc:mysql://shaynet.ddns.net:3306/
