--- a/PMLexicon1/.classpath
+++ b/PMLexicon1/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry excluding="resources/|resource/" kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Java Utilities/mysql-connector-java-5.1.45-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Java Utilities/rs2xml.jar"/>
+	<classpathentry kind="lib" path="/Users/shayne/eclipse stuff/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/shayne/eclipse stuff/Utilities/rs2xml.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
