--- a/PMLexicon1/src/config/config.properties
+++ b/PMLexicon1/src/config/config.properties
@@ -1,4 +1,14 @@
+# This is the configuration file for PMLexicon
+
+# The Database User Name and password
 user = rootext
 password = Scta1963#
+
+# The Database Name that will be used
 dbase = demo
-server = jdbc:mysql://shaynet.ddns.net:3306/
+
+# The Database server - External
+serverexternal = jdbc:mysql://shaynet.ddns.net:3306/ 
+
+# The Database server - LAN
+serverinternal = jdbc:mysql://10.0.0.5:3306/
