--- a/JavaGit02/.project
+++ b/JavaGit02/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaGit02</name>
+	<name>JavaProperties</name>
 	<comment></comment>
 	<projects>
 	</projects>
