--- a/JavaGit02/resources/app.properties
+++ b/JavaGit02/resources/app.properties
@@ -1,5 +1,6 @@
 # This is a test file for properties
 user = Shayne Tappan
 version = 1.0
-name = TestApp
+#name = TestApps
+group = hoes n poep
 date = 2016-11-12
