--- a/06Properties/src/myapp/app.properties
+++ b/06Properties/src/myapp/app.properties
@@ -1,6 +1,6 @@
 #This description goes to the header of a file
 #Mon Jan 22 22:47:00 CAT 2018
-user=rootext
+user=rootexts
 dbase=demo
 password=Scta1963\#
 serverexternal=jdbc\:mysql\://shaynet.ddns.net\:3306/ 
